@@ -1,3 +1,8 @@
+1657.	[doc]		ARM: document query log output.
+
+1656.	[doc]		Update DNSSEC description in ARM to cover DS, NSEC
+			DNSKEY and RRSIG.  [RT #11542]
+
 1655.	[placeholder]	rt11446
 
 1654.	[placeholder]	rt11541
